[package]
name = "tracing-timeline"
version = "0.1.0"
authors = ["Jan Kassens <jan@kassens.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.11.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.8.0"

[dev-dependencies]
rayon = "1.5.1"
